--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇭🇰 香港-3.82MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇬🇧 英国-1.42MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇯🇵 日本-351.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-549.1KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
-  - {name: 🇩🇪 德国-3.15MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇭🇰 香港-4.73MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-17.10MB/s(Youtube:不良林), server: relay1.wallless.cloud, port: 39001, type: vmess, uuid: 6f686183-b399-4976-a60f-dd2685ef8075, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-957.2KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇮🇳 印度-3.17MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇬🇧 英国-1.65MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
       - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
