--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-3.82MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-1.77MB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 未知国家-1.61MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-15.32MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.65MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇫🇷 法国-2.69MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-14.82MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
   - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇳🇱 荷兰-608.7KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-594.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: 140.83.84.72, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.83.84.72}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 未知国家-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-15.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
       - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
