--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇫🇷 法国-2.69MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-14.82MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
-  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-608.7KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-594.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: 140.83.84.72, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.83.84.72}}
+  - {name: 🇨🇳 中国-17.10MB/s(Youtube:不良林), server: relay1.wallless.cloud, port: 39001, type: vmess, uuid: 6f686183-b399-4976-a60f-dd2685ef8075, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 51.161.118.38, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-274.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-13.62MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 20.239.179.251, port: 50044, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
+  - {name: 🇰🇷 韩国-6.51MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-594.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
